# pet-similarity-description

./: README.md  app.py  pyproject.toml
src/: model.py  utils.py
